tests/neg-macros/expr-asInstanceOf/Test_2.scala
@main def test =
  println(Macro.foo()) // error
